update: fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,6 @@ code {
 *::-webkit-scrollbar-thumb {
   background: rgba(0, 0, 0, 0.1);
 }
+.ant-modal-content,
+.ant-dropdown-menu {
+}
